--- a/base-site/tsconfig.json
+++ b/base-site/tsconfig.json
@@ -19,7 +19,9 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    // use to export json files easily
+    "resolveJsonModule": true 
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
